[package]
name = "torvpn_win"
version = "0.1.0"
edition = "2021"
authors = ["wofl + G-Petey"]

[dependencies]
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json","rustls-tls"] }
rand = "0.8"
pqcrypto-dilithium = "0.5.0"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3.5"
base64 = "0.22"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "fs", "io-util", "signal", "time"] }
which = "6"
dirs = "5"
thiserror = "1"
humantime = "2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"

[profile.release]
# Keep enough debug info in release builds to make stack traces actionable.
debug = 2
strip = false
